@@ -115,18 +115,21 @@ public class FindFile extends JPanel {
         this.persistit = persistit;
 
         searchButton.addActionListener(new ActionListener() {
+            @Override
             public void actionPerformed(ActionEvent ae) {
                 doSearch();
             }
         });
 
         loadButton.addActionListener(new ActionListener() {
+            @Override
             public void actionPerformed(ActionEvent ae) {
                 doLoad();
             }
         });
 
         clearButton.addActionListener(new ActionListener() {
+            @Override
             public void actionPerformed(ActionEvent ae) {
                 doClear();
             }
@@ -216,6 +219,7 @@ public class FindFile extends JPanel {
         // performed in a separate thread.
         //
         Thread workerThread = new Thread() {
+            @Override
             public void run() {
                 if (suffix.length() > prefix.length()) {
                     //
@@ -248,6 +252,7 @@ public class FindFile extends JPanel {
         loadButton.setEnabled(false);
 
         Thread workerThread = new Thread(new Runnable() {
+            @Override
             public void run() {
                 loadFileNames(fileName);
             }
@@ -262,6 +267,7 @@ public class FindFile extends JPanel {
      */
     private void doClear() {
         Thread workerThread = new Thread(new Runnable() {
+            @Override
             public void run() {
                 resetFileNames();
             }
@@ -293,7 +299,7 @@ public class FindFile extends JPanel {
             KeyFilter filter = new KeyFilter(ex.getKey());
             if (fixed.length() != 0) {
                 String end = fixed.substring(0, fixed.length() - 1)
-                        + new Character((char) (fixed.charAt(fixed.length() - 1) + 1));
+                        + Character.valueOf((char) (fixed.charAt(fixed.length() - 1) + 1));
                 //
                 // append a Term that selects only the range accepted by the
                 // fixed portion of the name.
@@ -327,6 +333,7 @@ public class FindFile extends JPanel {
             setEnabled(searchField, true);
 
             SwingUtilities.invokeLater(new Runnable() {
+                @Override
                 public void run() {
                     int size = selectedFileNames.size();
                     for (int index = 0; index < size; index++) {
@@ -511,6 +518,7 @@ public class FindFile extends JPanel {
      */
     private void adjustProgressBar(final int value, final int maximum) {
         SwingUtilities.invokeLater(new Runnable() {
+            @Override
             public void run() {
                 progressBar.setMaximum(maximum);
                 progressBar.setValue(value);
@@ -532,6 +540,7 @@ public class FindFile extends JPanel {
      */
     private void setEnabled(final JComponent component, final boolean enabled) {
         SwingUtilities.invokeLater(new Runnable() {
+            @Override
             public void run() {
                 component.setEnabled(enabled);
             }
@@ -564,12 +573,14 @@ public class FindFile extends JPanel {
         // the containing JFrame.
         //
         frame.addWindowListener(new WindowAdapter() {
+            @Override
             public void windowClosed(WindowEvent we) {
                 //
                 // Persistit.close may take several seconds to complete. Best
                 // not to do it on the Swing event dispatch thread.
                 //
                 Thread workerThread = new Thread(new Runnable() {
+                    @Override
                     public void run() {
                         try {
                             System.out.println("Closing Persistit");
